WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234955
Inserting a new @keyframes rule does not start animations that already used this name
https://bugs.webkit.org/show_bug.cgi?id=234955
Summary
Inserting a new @keyframes rule does not start animations that already used t...
Antoine Quint
Reported
2022-01-07 06:04:48 PST
Inserting a new @keyframes rule does not start animations that already used this name
Attachments
Patch
(10.57 KB, patch)
2022-01-07 06:10 PST
,
Antoine Quint
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-01-07 06:10:24 PST
Created
attachment 448583
[details]
Patch
Antti Koivisto
Comment 2
2022-01-07 06:15:54 PST
Comment on
attachment 448583
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448583&action=review
> Source/WebCore/style/Styleable.cpp:216 > + for (size_t i = 0; i < animations.size(); ++i) {
Might be good for the AnimationList to expose the underlying const vector so these could use range-for iteration.
Antoine Quint
Comment 3
2022-01-07 07:43:40 PST
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 448583
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=448583&action=review
> > > Source/WebCore/style/Styleable.cpp:216 > > + for (size_t i = 0; i < animations.size(); ++i) { > > Might be good for the AnimationList to expose the underlying const vector so > these could use range-for iteration.
See
bug 234957
. I'll use the iterator before landing this patch.
Antoine Quint
Comment 4
2022-01-07 11:23:04 PST
Committed
r287769
(
245829@trunk
): <
https://commits.webkit.org/245829@trunk
>
Radar WebKit Bug Importer
Comment 5
2022-01-07 11:24:24 PST
<
rdar://problem/87263414
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug